# CCTech

./: .gitignore  3D_Line_Restructured.cpp  3d_line.cpp  Framework.txt  hello.cpp  plotline.cpp
Project/application/: line_data.txt  main  makefile
Project/application/src/: main.cpp
Project/geometry/: makefile
Project/geometry/include/: mylib.h
Project/geometry/src/: 3D_Line_Restructured.cpp  mylib.cpp
Project_Plotter/application/: makefile
Project_cuboid/application/: cuboid.gnu
Project_cuboid/application/src/: main.cpp
Project_cuboid/geometry/: makefile
Project_cuboid/geometry/src/: mylib.cpp
Sketcher/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Sketcher.sln  Sketcher.vcxproj  Sketcher.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  makefile  plot.gnu  plot_script.gp  plot_sphere.gnu  sonar-project.properties  stl_plot.gp
Sketcher/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Sketcher/.scannerwork/: report-task.txt
Sketcher/SketcherGUI/: GLWidget.cpp  GLWidget.h  Scene.h  ShapeInputDialog.cpp  ShapeInputDialog.h  TransformDialogue.cpp  TransformDialogue.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Sketcher/SketcherGUI/include/: ExtrudeUtils.h  ShapeInputDialog.h  SketchGLWidget.h  SketchWindow.h  TriangleIntersection.h  mainwindow.h  polygon_boolean.h
Sketcher/SketcherGUI/src/: ExtrudeUtils.cpp  GLWidget.cpp  Scene.cpp  SketchGLWidget.cpp  SketchWindow.cpp  TriangleIntersection.cpp  mainwindow.cpp  mainwindow.ui  polygon_boolean.cpp
Sketcher/application/include/: ApplicationManager.h  ShapeFactory.h
Sketcher/application/src/: ApplicationManager.cpp  ShapeFactory.cpp  main.cpp
Sketcher/assets/: cubee.stl  hum.stl
Sketcher/clutter/: plot_script.gp
Sketcher/geometry/include/: FileConverter.h  TriangulatedPlotter.h  bezier.h  cuboid.h  cylinder.h  line3D.h  plot_utils.h  polygon.h  polyline.h  shapes.h  sphere.h  structure.h  triangle.h
Sketcher/geometry/src/: ApplicationManager.cpp  FileConverter.cpp  ShapeFactory.cpp  TriangulatedPlotter.cpp  bezier.cpp  cuboid.cpp  cylinder.cpp  line3D.cpp  plot_utils.cpp  polygon.cpp  polyline.cpp  sphere.cpp  structure.cpp  triangle.cpp
geometry/include/: mylib.h
geometry/src/: mylib.cpp
